--- a/data-engineer.html
+++ b/data-engineer.html
@@ -64,7 +64,7 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/remedypartners/job/oIiDafwx'>Remedy BPCI Partners, LLC. Careers - Data Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/remedypartners/job/oIiDafwx'>Remedy BPCI Partners, LLC. Careers - Data Engineer</a></h5> 
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -78,7 +78,7 @@
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999692421716--permanent-job-data-engineer-salary-140-180k-accept-visa-candidates'>Bey (Permanent Job) Data Engineer - Salary: $140-180K - Accept Visa Candidates | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999692421716--permanent-job-data-engineer-salary-140-180k-accept-visa-candidates'>Bey (Permanent Job) Data Engineer - Salary: $140-180K - Accept Visa Candidates | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -204,7 +204,7 @@ Assemble large?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Data Engineer at Cloud Academy.</p>
 <hr/>
-<h5><a href='https://photoboxgroup.workable.com/jobs/1087076'>ETL Data Engineer - Apply online - Photobox Group - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://photoboxgroup.workable.com/jobs/1087076'>ETL Data Engineer - Apply online - Photobox Group - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Apply online for the job of ETL Data Engineer at Photobox Group.</p>
 <hr/>
@@ -339,7 +339,7 @@ online content network for information and online operations of CBS Corporation
 <p>6 days ago ... This position is in Solvay Research & Innovation Centre Brussels, in the recently 
 created Data Management Excellence Team. Within this multidisciplinary team?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/5ip3ywgqb7zop5nibubdnxrp1h'>Senior Data Engineer | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/5ip3ywgqb7zop5nibubdnxrp1h'>Senior Data Engineer | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -351,7 +351,7 @@ created Data Management Excellence Team. Within this multidisciplinary team?...<
 <p><span class="badge badge-light">Cape Town Cape Town South Africa</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ancestry/7b248d7f-5f6c-4558-8368-18c14b2eebde'>Ancestry - Data Engineer ? Enterprise Data Management / DNA Operations</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ancestry/7b248d7f-5f6c-4558-8368-18c14b2eebde'>Ancestry - Data Engineer ? Enterprise Data Management / DNA Operations</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -367,7 +367,7 @@ created Data Management Excellence Team. Within this multidisciplinary team?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://definedcrowd.recruitee.com/o/data-engineer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://definedcrowd.recruitee.com/o/data-engineer'>
       Data Engineer - DefinedCrowd
     </a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
@@ -437,7 +437,7 @@ with the role for which you're applying??. Please tell us why you selected such 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://johnsoncontrols.referrals.selectminds.com/jobs/cmdb-data-engineer-78275'>CMDB Data Engineer - Johnson Controls Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://johnsoncontrols.referrals.selectminds.com/jobs/cmdb-data-engineer-78275'>CMDB Data Engineer - Johnson Controls Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... The JCI Service Management team is seeking a Configuration Management Data 
 Engineer for managing the CMDB (Configuration Management Database)?...</p>
