--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -50,7 +50,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/UmdaschGroup/743999692229945-mitarbeiter-in-it-business-intelligence-data-warehouse-developer-m-w-d-'>Umdasch Group Mitarbeiter/in IT ? Business Intelligence & Data Warehouse Developer (m/w/d) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/UmdaschGroup/743999692229945-mitarbeiter-in-it-business-intelligence-data-warehouse-developer-m-w-d-'>Umdasch Group Mitarbeiter/in IT ? Business Intelligence & Data Warehouse Developer (m/w/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -58,12 +58,12 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://twincap.join.com/jobs/260568-business-intelligence-analyst'>Job @ TwinCap (Z?rich): Business Intelligence Analyst | JOIN</a></h5> 
+<h5><a href='https://twincap.join.com/jobs/260568-business-intelligence-analyst'>Job @ TwinCap (Z?rich): Business Intelligence Analyst | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>20. Juli 2019 ... TwinCap GmbH has a job opening for Business Intelligence Analyst in Z?rich (
 published: 28.06.2019). Apply now or check the other available jobs.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/2u/jobs/4371576002'>Job Application for Sr Director Business Intelligence at 2U</a></h5> 
+<h5><a href='https://boards.greenhouse.io/2u/jobs/4371576002'>Job Application for Sr Director Business Intelligence at 2U</a></h5> 
 <p><span class="badge badge-light">US-MD-Lanham</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -187,7 +187,7 @@ analyzing and reporting operational and business data from multiple sources.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/sega-europe-limited/job/oMLBafw2'>SEGA Europe Limited Careers - Business Intelligence Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/sega-europe-limited/job/oMLBafw2'>SEGA Europe Limited Careers - Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -199,7 +199,7 @@ analyzing and reporting operational and business data from multiple sources.</p>
 <p><span class="badge badge-light">Prague</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/creditkarma/69201b7d-ebd2-4fec-bce4-55acffcb72b0'>Credit Karma - Staff Business Intelligence Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/creditkarma/69201b7d-ebd2-4fec-bce4-55acffcb72b0'>Credit Karma - Staff Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -246,7 +246,7 @@ Technologies Inc.</p>
 scalable data pipelines to support various data integrations; Propose, build, and
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://schibsted-classified-hungary-kft.workable.com/j/CFCA0EE35C?viewed=true'>Business Intelligence Analyst</a></h5> 
+<h5><a href='https://schibsted-classified-hungary-kft.workable.com/j/CFCA0EE35C?viewed=true'>Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 napja ... Apply online for the job of Business Intelligence Analyst at Adevinta Classified 
 Media Hungary Kft.</p>
@@ -261,7 +261,7 @@ Media Hungary Kft.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://fooda.applytojob.com/apply/AeXbGSCmMn/Business-Intelligence-Analyst'>Business Intelligence Analyst - Fooda - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://fooda.applytojob.com/apply/AeXbGSCmMn/Business-Intelligence-Analyst'>Business Intelligence Analyst - Fooda - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Chicago, IL; Full Time; Data Analytics; Mid Level. Share. Who We Are: We 
 believe a workplace food program is something employees should love and look
@@ -281,7 +281,7 @@ developing and implementing metrics and reporting to improve our business and
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/pitchbook/job/oDwBafwE'>PitchBook Data, Inc. Careers - Senior Business Intelligence Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/pitchbook/job/oDwBafwE'>PitchBook Data, Inc. Careers - Senior Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">Seattle Seattle San Francisco New York London Mumbai</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -369,7 +369,7 @@ Mavenlink?...</p>
 <p><span class="badge badge-light">Jakarta, Indonesia</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/groupm-na/job/odczafwS'>GroupM North America Careers - Manager, Business Intelligence</a></h5> 
+<h5><a href='https://jobs.jobvite.com/groupm-na/job/odczafwS'>GroupM North America Careers - Manager, Business Intelligence</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... ABOUT THE TEAM: Business Science, which encompasses Digital Analytics, is 
 one of the fastest growing fields within MediaCom and focuses on (1) providing?...</p>
@@ -434,7 +434,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">Redwood City California</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/rappi/e8cd1a65-94e4-4ecd-a129-008e088875c3'>Rappi - Business Intelligence Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/rappi/e8cd1a65-94e4-4ecd-a129-008e088875c3'>Rappi - Business Intelligence Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
